name:                HSVO
version:             0.1.0.0
synopsis:            Attempt at implementing a Support Vector Machine
description:         Please see README.md
homepage:            https://github.com/githubuser/HSVO#readme
license:             BSD3
license-file:        LICENSE
author:              John Vial
maintainer:          github.com/johnny555
copyright:           2016 John Vial
category:            Numeric
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Numeric.Algorithms.HSVO.SVM  
                     , Numeric.Algorithms.HSVO.Detail
                     , Numeric.Algorithms.HSVO.Types
  build-depends:       base >= 4.7 && < 5,
                       repa >= 3.4.0,
                       vector >= 0.11,
                       repa-algorithms >= 3.4.0,
                       lens >= 4.13,
                       mtl >= 2.2.1,
                       generic-deriving >= 1.1.1
  default-language:    Haskell2010


executable test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base > 4.7 && < 5,
                       lens >= 4.13,
                       mtl >= 2.2.1,
                       vector >= 0.11,
                       repa >= 3.4.0,
                       repa-algorithms >= 3.4.0,
                       HSVO
                       
  default-language:    Haskell2010


test-suite HSVO-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HSVO
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/HSVO
